required args constructor